--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-fragment",
+  "name": "@contaazul/vue-fragment",
   "version": "1.5.1",
   "description": "fragment component for vuejs",
   "main": "dist/vue-fragment.min.js",
